# rusty-jioblock

./: Cargo.toml  test_wallet.json  wallet_keystore.json
benches/: mining_bench.rs
consensus/: Cargo.toml
consensus/core/: Cargo.toml
consensus/core/src/: acceptance_data.rs  block.rs  blockhash.rs  blockstatus.rs  coinbase.rs  constants.rs  daa_score_timestamp.rs  errors.rs  ghostdag.rs  header.rs  lib.rs  merkle.rs  mining_rules.rs  muhash.rs  network.rs  pruning.rs  script.rs  sign.rs  subnets.rs  trusted.rs  tx.rs
consensus/core/src/api/: mod.rs
consensus/core/src/config/: bps.rs  constants.rs  genesis.rs  mod.rs  params.rs
consensus/core/src/hashing/: header.rs  mod.rs  sighash.rs  sighash_type.rs  tx.rs
consensus/core/src/mass/: mod.rs
consensus/core/src/tx/: script_public_key.rs
consensus/core/src/utxo/: mod.rs  utxo_collection.rs  utxo_diff.rs  utxo_error.rs  utxo_inquirer.rs  utxo_view.rs
consensus/pow/: Cargo.toml
consensus/pow/src/: lib.rs  matrix.rs  wasm.rs  xoshiro.rs
consensus/src/: lib.rs
consensus/src/consensus/: mod.rs  types.rs
consensus/src/consensus/dag/: integration_test.rs  mod.rs  reachability.rs  relations.rs  topology.rs
consensus/src/consensus/difficulty/: manager.rs  mod.rs  window.rs
consensus/src/consensus/ghostdag/: integration_test.rs  manager.rs  mod.rs  protocol.rs  stores.rs
consensus/src/consensus/storage/: block_store.rs  consensus_db.rs  mod.rs  utxo_set.rs
consensus/src/consensus/validation/: block_validator.rs  contextual.rs  header_validator.rs  mod.rs  transaction_validator.rs
consensus/src/pipeline/: block_processor.rs  body_processor.rs  deps_manager.rs  header_processor.rs  mod.rs  virtual_processor.rs
consensus/src/pipeline/flow/: mod.rs  process_queue.rs  validation_flow.rs
consensus/src/process/: coinbase.rs  integration_test.rs  mining.rs  mod.rs  parents_builder.rs  past_median_time.rs  pruning.rs  pruning_proof.rs  relay.rs  sync.rs
crypto/: Cargo.toml
crypto/addresses/: Cargo.toml
crypto/addresses/benches/: bench.rs
crypto/addresses/src/: lib.rs
crypto/hashes/: BENCHMARKS.md  Cargo.toml
crypto/hashes/benches/: bench.rs
crypto/hashes/examples/: generate_seeds.rs
crypto/hashes/src/: builders.rs  hasher.rs  hashers.rs  lib.rs  merkle.rs  pow_hash.rs  pow_hashers.rs
crypto/merkle/: cargo.toml
crypto/merkle/src/: lib.rs
crypto/muhash/: Cargo.toml
crypto/muhash/src/: lib.rs
crypto/src/: lib.rs
database/: Cargo.toml
database/src/: cache.rs  db.rs  errors.rs  lib.rs
database/src/stores/: block_store.rs  ghostdag_store.rs  header_store.rs  metadata_store.rs  mod.rs  reachability_store.rs  utxo_store.rs
explorer/: Cargo.toml  README.md  jio_explorer.db
explorer-frontend/: package-lock.json  package.json
explorer-frontend/src/app/: page.tsx
explorer-frontend/src/components/dashboard/: BlockDagInfoCard.tsx  MiningStatsCard.tsx  NetworkStatsCard.tsx  RecentBlocksCard.tsx  RecentTransactionsCard.tsx
explorer-frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
explorer-frontend/src/types/: api.ts
explorer-frontend/src/utils/: api.ts
explorer/migrations/: 001_initial_schema.sql
explorer/src/: cache.rs  error.rs  lib.rs  main.rs  models.rs  rpc_client.rs
explorer/src/api/: mod.rs  server.rs
explorer/src/api/routes/: addresses.rs  blocks.rs  mod.rs  search.rs  stats.rs  transactions.rs
explorer/src/database/: connection.rs  mod.rs  queries.rs  schema.rs
explorer/src/indexer/: address_indexer.rs  block_indexer.rs  mod.rs  service.rs  transaction_indexer.rs
explorer/src/websocket/: mod.rs  server.rs  subscriptions.rs
jiopad/: Cargo.toml
jiopad/data/: 000024.sst  000025.sst  IDENTITY  LOG  LOG.old.1763181354003714  MANIFEST-000027  OPTIONS-000029
jiopad/src/: cli.rs  config.rs  consensus_manager.rs  daemon.rs  lib.rs  main.rs  mempool.rs  mining_coordinator.rs  mining_dashboard.html  network_manager.rs  rpc_server.rs  storage_manager.rs  sync_manager.rs  ui.rs
jiopad/tests/: genesis_bootstrap.rs  storage_persistence.rs
math/: Cargo.toml
math/src/: lib.rs
mining/: Cargo.toml  difficulty.rs  job.rs  manager.rs  mod.rs  pow.rs  rpc_miner.rs  tests.rs  worker.rs
network/: Cargo.toml
network/src/: hub.rs  lib.rs
network/src/p2p/: mod.rs  peer.rs
network/src/protowire/: mod.rs
rpc/core/: Cargo.toml
rpc/core/src/: api.rs  coordinator.rs  lib.rs  mempool.rs  model.rs
rpc/wrpc/: Cargo.toml
rpc/wrpc/src/: lib.rs  server.rs
utils/: Cargo.toml
utils/src/: lib.rs
wallet/: Cargo.toml
wallet/src/: address.rs  keys.rs  keystore.rs  lib.rs  signer.rs  tx_builder.rs
