[package]
name = "jiopad"
version = "0.1.0"
edition = "2021"
authors = ["JIO Team"]
description = "JIO blockchain full node daemon"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
hex = "0.4"
bincode = "1.3"

# Internal dependencies
consensus = { path = "../consensus" }
consensus_core = { path = "../consensus/core" }
consensus_pow = { path = "../consensus/pow" }
database = { path = "../database" }
mining = { path = "../mining" }
rpc_core = { path = "../rpc/core" }
rpc_wrpc = { path = "../rpc/wrpc" }
num_cpus = "1.17"
network = { path = "../network" }

[dev-dependencies]
tempfile = "3.8"
