[package]
name = "mining"
version = "0.1.0"
edition = "2021"

[lib]
name = "mining"
path = "mod.rs"

[dependencies]
# Core blockchain dependencies
consensus_core = { path = "../consensus/core" }
consensus = { path = "../consensus" }
rpc_core = { path = "../rpc/core" }
crypto-hashes = { path = "../crypto/hashes" }

# Utilities
primitive-types = "0.12"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# RPC/WebSocket client
tungstenite = "0.20"
url = "2.3"
serde_json = "1.0"
hex = "0.4"

# Threading
num_cpus = "1.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mining_bench"
path = "../benches/mining_bench.rs"
harness = false
