[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs"] }
consensus_core = { path = "../consensus/core" }
crypto-hashes = { path = "../crypto/hashes" }
thiserror = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
secp256k1 = { version = "0.27", features = ["rand", "recovery"] }
ripemd = "0.1"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
bs58 = "0.5"
tempfile = "3.0"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
consensus = { path = "../consensus" }
database = { path = "../database" }
