[package]
name = "crypto-hashes"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto_hashes"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
borsh = "0.9"
borsh-derive = "0.9"
hex = "0.4"
sha2 = "0.10"
hex-literal = "0.3"

[dev-dependencies]
hex = "0.4"
hex-literal = "0.3"
