[package]
name = "rpc_wrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
rpc_core = { path = "../core" }
consensus_core = { path = "../../consensus/core" }
tracing = "0.1"
hex = "0.4.3"
